# credit_card_fraud_detection

./: README.md  pyproject.toml
conf/base/: catalog.yml  logging.yml
docs/source/: conf.py
notebooks/: Exploration.ipynb
src/: setup.py
src/fraud_detection/: __main__.py  settings.py  utils.py
src/tests/: test_run.py
