[tool.kedro]
package_name = "fraud_detection"
project_name = "fraud_detection"
kedro_init_version = "0.18.12"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/test -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "credit-card-fraud-detection"
version = "0.1.0"
description = ""
authors = ["Duong Vu"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro-viz = "^6.3.4"
jupyterlab = "^4.0.5"
great-expectations = "^0.17.9"
jupyter = "^1.0.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
